--- a/assets/style.css
+++ b/assets/style.css
@@ -234,7 +234,9 @@ main {
 }
 
 .hotels-restaurants .view,
-.travel-tips .view {
+.travel-tips .view,
+.activities .view,
+.about-section .view {
     color: #5243C2;
     padding: 0.625rem;
 }
@@ -311,4 +313,58 @@ main {
 
 .blog .bottom img {
     margin-right: 0.25rem;
+}
+
+.about-section {
+    width: 83.13%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 7.5rem auto;
+}
+
+.about-section .left-side {
+    width: 48%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.about-section .left-side p {
+    color: #5B5B5B;
+    margin: 2rem 0rem;
+    font-size: 1rem !important;
+}
+
+.about-section .right-side img {
+    border-radius: 1.5rem;
+}
+
+/* footer  */
+
+footer {
+    background-color: #F9F9F9;
+}
+
+.footer-content {
+    width: 71.74%;
+    margin: auto;
+    padding: 7.5rem 0rem;
+}
+
+.footer-brand {
+    width: 26%;
+}
+
+.footer-brand p {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+.footer-social-media {
+    width: 44.8%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
