--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,13 @@ li {
     cursor: pointer;
 }
 
+a {
+    text-decoration: none;
+    color: #5B5B5B;
+    font-weight: 400;
+    font-size: 0.81rem;
+}
+
 li:hover {
     font-weight: 600;
 }
@@ -351,6 +358,9 @@ footer {
     width: 71.74%;
     margin: auto;
     padding: 7.5rem 0rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .footer-brand {
@@ -367,4 +377,18 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.footer-links {
+    width: 36.7%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-heading {
+    margin-bottom: 1.25rem;
+}
+
+.footer-subscribe {
+    width: 28.19%;
 }
