--- a/assets/style.css
+++ b/assets/style.css
@@ -180,7 +180,7 @@ header .right-side .profile-photo .photo {
 }
 
 /* animation */
-.animation {
+/* .animation {
   animation: run 10s linear infinite;
 }
 
@@ -192,7 +192,7 @@ header .right-side .profile-photo .photo {
   100% {
     transform: translateX(100%);
   }
-}
+} */
 
 /* hero search */
 
@@ -274,9 +274,14 @@ main {
 
 table {
   width: 100%;
+  height: 100%;
   border: 1px solid #e0e0e0;
   border-top-right-radius: 1.5rem;
   border-bottom-right-radius: 1.5rem;
+}
+
+tbody {
+  height: 100%;
 }
 
 video {
@@ -294,23 +299,31 @@ video {
   width: 50%;
 }
 
+
 .content {
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  /* height: 24.2rem; */
 }
+
 
 .popular-places .right-side {
   width: 50%;
+  /* height: 100%; */
 }
 
 .popular-places tr {
   width: 100%;
 }
 
+table tr td {
+  padding-left: 1.5rem !important;
+}
+
 .popular-places th {
   text-align: start;
-  padding: 1.9rem 1.5rem;
+  padding-left: 1.5rem !important;
   width: 33.28%;
   font-weight: 500;
 }
@@ -321,7 +334,6 @@ td {
 
 .popular-places td {
   width: 33.28%;
-  padding: 1rem 1.5rem;
   font-weight: 300;
 }
 
@@ -345,6 +357,13 @@ td {
   color: #5b5b5b;
   margin: 2rem 0rem;
   font-size: 1rem !important;
+}
+
+.about-section .right-side {
+  width: 48.6%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .about-section .right-side img {
@@ -430,6 +449,6 @@ input {
   padding-bottom: 1.5rem;
 }
 
-.d-done {
-  display: none;
+.d-none {
+  display: none !important;
 }
