--- a/assets/media.css
+++ b/assets/media.css
@@ -1,29 +1,216 @@
 @media only screen and (max-width: 1800px) {
-  .hotels-cards .card .top {
-    width: 100%;
-  }
-  .hotels-cards .card .top img {
-    width: 100%;
+
+
+  .popular-places .card {
+    width: 15%;
   }
 
-  .hotels-cards .card {
-    width: 22%;
-  }
-
-  .blog {
-    width: 48.83%;
-  }
-
-  .blog .left-side {
+  .about-section .left-side {
     width: 40%;
   }
+}
 
-  .blog .left-side img {
+@media only screen and (max-width: 1636px) {
+  .hero-button {
+    width: 20%;
+  }
+
+  .popular-cards .card {
+    width: 15%;
+  }
+
+  .popular-cards .card img {
+    width: 100%;
+  }
+
+  .activities .card {
+    width: 20%;
+  }
+
+  .activities .card img {
     width: 100%;
   }
 }
 
-@media only screen and (max-width: 700px) {
-    
+@media only screen and (max-width: 1439px) {
+  .hero-search {
+    width: 75%;
+  }
 
+}
+
+@media only screen and (max-width: 1240px) {
+  .hero-button {
+    width: 27%;
+  }
+}
+
+@media only screen and (max-width: 1160px) {
+  .hero-search {
+    padding: 0.01 !important;
+  }
+
+  .search-button {
+    /* margin-right: 1rem; */
+  }
+
+  .search-location,
+  .search-activity,
+  .search-date,
+  .search-guests {
+    padding: 0rem;
+  }
+
+  .hero-title {
+    margin-top: 9rem !important;
+  }
+
+  .hero-button {
+    margin-bottom: 9rem !important;
+  }
+
+  .about-section .left-side {
+    width: 50%;
+  }
+
+  .popular-destinations {
+    margin: 5.5rem 0rem;
+  }
+
+  .popular-places {
+    margin-bottom: 5.5rem;
+  }
+
+  .about-section {
+    margin: 5.5rem auto;
+  }
+
+  .about-section .right-side {
+    width: 100%;
+  }
+
+  .about-section .right-side img {
+    width: 90%;
+  }
+
+  .about-section .left-side {
+    width: 100%;
+  }
+
+  .animation img {
+    width: 10%;
+    position: relative;
+    bottom: -1.5rem;
+  }
+
+  .hero-title h1 {
+    font-size: 2.4rem;
+  }
+}
+
+@media only screen and (max-width: 1060px) {
+  header .middle {
+    width: 70%;
+  }
+
+  header,
+  main,
+  .footer-content {
+    width: 85%;
+  }
+
+  .hero-button {
+    padding: 1rem 0rem !important;
+  }
+
+  .footer-subscribe {
+    width: 31%;
+  }
+
+  .footer-content {
+    padding: 5.5rem 0rem;
+  }
+
+}
+
+@media only screen and (max-width: 990px) {
+
+  .search-button,
+  .subscribe-button {
+    padding: 0.7rem !important;
+  }
+
+  .middle {
+    display: none;
+  }
+
+  header .right-side .menu-icon {
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+  }
+
+  header .right-side img {
+    display: block !important;
+  }
+
+  .hero-search {
+    width: 85%;
+  }
+}
+
+@media only screen and (max-width: 866px) {
+
+  .main-background {
+    padding-bottom: 2rem !important;
+  }
+
+  .hero-search {
+    width: 90%;
+  }
+
+  .hero-search p {
+    font-size: 0.7rem !important;
+  }
+
+  .hero-button {
+    width: 33%;
+    margin-bottom: 2rem !important;
+  }
+
+  .footer-content {
+    flex-wrap: wrap;
+  }
+
+  .footer-brand {
+    text-align: center;
+    margin: auto;
+    width: 80%;
+  }
+
+  .footer-social-media {
+    width: 20%;
+    text-align: center;
+    margin: auto;
+  }
+
+  .footer-links {
+    text-align: center;
+    margin: 3rem auto !important;
+    width: 80%;
+  }
+
+  .footer-subscribe,
+  .subscribe {
+    width: 80%;
+    text-align: center;
+    margin: 2rem auto !important;
+  }
+
+  .subscribe {
+    justify-content: space-between !important;
+  }
+
+  form {
+    width: 100%;
+  }
 }
