--- a/assets/style.css
+++ b/assets/style.css
@@ -7,12 +7,12 @@
 
 @import url(./media.css);
 
-ul {
-  list-style: none;
+body {
+  overflow-x: hidden;
 }
 
-li {
-  cursor: pointer;
+ul {
+  list-style: none;
 }
 
 img {
@@ -26,14 +26,26 @@ a {
   font-size: 0.81rem;
 }
 
+a:hover {
+  color: #494949;
+}
+
 iframe {
   cursor: pointer;
 }
 
-
+li {
+  text-align: center;
+  width: 14.28%;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  line-height: 21px;
+}
 
 li:hover {
-  font-weight: 600;
+  opacity: 1;
+  font-weight: 400;
 }
 
 button {
@@ -180,19 +192,27 @@ header .right-side .profile-photo .photo {
 }
 
 /* animation */
-/* .animation {
-  animation: run 10s linear infinite;
+
+.animation {
+  width: 100%;
+  position: relative;
+}
+
+.animation img {
+  position: absolute;
+  top: -3rem;
+  animation: run 8s linear infinite;
 }
 
 @keyframes run {
   0% {
-    transform: translateX(0);
+    left: -15rem;
   }
 
   100% {
-    transform: translateX(100%);
+    left: 100%;
   }
-} */
+}
 
 /* hero search */
 
@@ -250,6 +270,12 @@ main {
   justify-content: space-between;
 }
 
+.card img:hover {
+  transition: 1.2s;
+  transform: rotate(18deg);
+  /* width: 110%; */
+}
+
 .title {
   display: flex;
   align-items: center;
@@ -272,69 +298,57 @@ main {
   font-weight: 600;
 }
 
-table {
-  width: 100%;
-  height: 100%;
-  border: 1px solid #e0e0e0;
-  border-top-right-radius: 1.5rem;
-  border-bottom-right-radius: 1.5rem;
+.content {
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
 }
 
-tbody {
-  height: 100%;
+.content .left-side,
+.content .right-side {
+  width: 50%;
+  display: flex;
+  /* flex-direction: column; */
 }
 
 video {
   width: 100%;
+  height: 100%;
   border-top-left-radius: 1.5rem;
   border-bottom-left-radius: 1.5rem;
-  cursor: pointer;
+}
+
+table {
+  width: 100%;
+  height: 100%;
+  border-top-right-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
 }
 
 .popular-places {
   margin-bottom: 7.5rem;
 }
 
-.content .left-side {
-  width: 50%;
+.popular-places table {
+  border: 1px solid #e0e0e0;
 }
 
-
-.content {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  /* height: 24.2rem; */
-}
-
-
-.popular-places .right-side {
-  width: 50%;
-  /* height: 100%; */
-}
-
-.popular-places tr {
-  width: 100%;
-}
-
-table tr td {
+.popular-places td,
+.popular-places th {
   padding-left: 1.5rem !important;
+  cursor: pointer;
 }
 
 .popular-places th {
-  text-align: start;
-  padding-left: 1.5rem !important;
-  width: 33.28%;
   font-weight: 500;
-}
-
-td {
-  border-top: 1px solid #e0e0e0;
+  text-align: start;
+  width: 33.28%;
 }
 
 .popular-places td {
-  width: 33.28%;
   font-weight: 300;
+  width: 33.28%;
+  border-top: 1px solid #e0e0e0;
 }
 
 .about-section {
@@ -415,8 +429,17 @@ footer {
   width: 28.19%;
 }
 
+.footer-column {
+  display: flex;
+  flex-direction: column;
+}
+
 .footer-column li {
   margin-bottom: 0.75rem;
+}
+
+.footer-menu ul {
+  width: 100%;
 }
 
 .subscribe-form {
