--- a/assets/style.css
+++ b/assets/style.css
@@ -194,7 +194,7 @@ header .right-side .profile-photo .photo {
 
 /* animation */
 
-/* .animation {
+.animation {
   width: 100%;
   position: relative;
 }
@@ -213,7 +213,7 @@ header .right-side .profile-photo .photo {
   100% {
     left: 100%;
   }
-} */
+}
 
 /* hero search */
 
