--- a/assets/media.css
+++ b/assets/media.css
@@ -13,10 +13,13 @@
     width: 20%;
   }
 
-  .popular-cards .card {
-    width: 15%;
+  .popular-cards {
+    flex-wrap: wrap;
   }
 
+  .popular-cards .card {
+    width: 28%;
+  }
   .popular-cards .card img {
     width: 100%;
   }
@@ -27,6 +30,15 @@
 
   .activities .card img {
     width: 100%;
+  }
+
+  header,
+  main {
+    width: 90% !important;
+  }
+
+  .footer-content {
+    width: 90% !important;
   }
 }
 
@@ -56,8 +68,11 @@
   }
 }
 
-
 @media only screen and (max-width: 1500px) {
+  .hero-search {
+    width: 70.43%;
+  }
+
   .footer-content {
     flex-wrap: wrap;
     padding: 4.5rem 0rem;
@@ -70,25 +85,12 @@
   .footer-brand {
     margin-top: 4rem;
     width: 50%;
-
   }
 
   .footer-subscribe {
     width: 100%;
     margin-top: 4rem;
   }
-
-  header,
-  main {
-    width: 85% !important;
-  }
-
-  .footer-content {
-    width: 85% !important;
-  }
-
-
-
 }
 
 @media only screen and (max-width: 1240px) {
@@ -97,14 +99,21 @@
   }
 
   .footer-subscribe {
-    width: 32%;
+    width: 40%;
+  }
+
+  .subscribe-form {
+    width: 100%;
   }
 }
 
 @media only screen and (max-width: 1160px) {
-
   header .middle {
     width: 73%;
+  }
+
+  header {
+    padding-top: 0.5rem;
   }
 
   .hero-search {
@@ -177,14 +186,8 @@
     width: 70%;
   }
 
-
-
   .hero-button {
     padding: 1rem 0rem !important;
-  }
-
-  .footer-subscribe {
-    width: 31%;
   }
 
   .footer-content {
@@ -193,7 +196,6 @@
 }
 
 @media only screen and (max-width: 990px) {
-
   .search-button,
   .subscribe-button {
     padding: 0.7rem !important;
@@ -232,11 +234,7 @@
     order: 1;
   }
 
-  .footer-brand img {
-    margin-left: 1.3rem;
-  }
-
-  input {
+  .subscribe input {
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
@@ -278,7 +276,7 @@
   }
 
   .hero-button {
-    width: 33%;
+    width: 40%;
     margin-bottom: 2rem !important;
   }
 
@@ -293,7 +291,7 @@
   }
 
   .footer-social-media {
-    width: 20%;
+    width: 40%;
     text-align: center;
     margin: auto;
   }
@@ -367,7 +365,7 @@
   }
 
   .hero-title {
-    margin-top: 4rem !important;
+    margin-top: 1rem !important;
   }
 
   .popular-destinations p {
@@ -449,7 +447,10 @@
     display: none;
   }
 
-  .animation img {}
+  .animation img {
+    width: 20%;
+    top: -2rem;
+  }
 
   form {
     margin: 0.2rem !important;
@@ -496,6 +497,19 @@
   header .right-side .menu-icon {
     margin-top: 0rem;
   }
+
+  header .right-side .menu-icon {
+    margin: 0rem !important;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  .hero-search {
+    display: none !important;
+  }
+  .seacrh-column {
+    display: block !important;
+  }
 }
 
 @media only screen and (max-width: 450px) {
@@ -519,10 +533,11 @@
     display: none;
   }
 
-  .animation img {}
+  .animation img {
+  }
 
   .popular-cards .card {
-    width: 45%;
+    width: 48%;
   }
 
   .activities .cards {
@@ -552,8 +567,6 @@
     width: 80%;
   }
 
-
-
   .about-section .left-side p {
     font-size: 0.8rem !important;
   }
@@ -568,7 +581,6 @@
   .title h2 {
     font-size: 1.2rem !important;
   }
-
 
   .popular-places {
     margin-bottom: 2rem;
@@ -589,29 +601,111 @@
     margin-bottom: 0.5rem !important;
   }
 
-
   .footer-subscribe,
   .subscribe {
     width: 100%;
   }
 
-
-
-  .animation img {}
-
-  .activities .card {
-    width: 48%;
+  .animation img {
+    width: 20%;
   }
 }
 
-/* @media only screen and (max-width: 290px) {
-
-  .search-button,
+@media only screen and (max-width: 311px) {
+  .subscribe,
+  .title {
+    flex-wrap: wrap;
+  }
   .subscribe-button {
-    padding: 0.3rem !important;
+    margin-top: 0.5rem;
+    width: 100%;
+  }
+  .hero-title {
+    margin: 0.2rem 0rem !important;
+  }
+  form img {
+    display: none;
+  }
+
+  .animation img {
+    top: -4rem;
+  }
+}
+
+@media only screen and (max-width: 270px) {
+  .discover {
+    display: none;
+  }
+
+  .mobile {
+    display: block !important;
+  }
+  .hero-button {
+    width: 80%;
+  }
+  .content .right-side {
+    width: 100%;
+    overflow-x: scroll;
+  }
+
+  .footer-social-media {
+    width: 100%;
   }
 
   .title h2 {
-    font-size: 0.9rem !important;
+    width: 100%;
+    font-size: 1rem !important;
+    text-align: center;
   }
-} */
+
+  .title {
+    justify-content: center !important;
+    margin-bottom: 0rem !important;
+  }
+
+  .popular-destinations h2 {
+    text-align: center;
+    font-size: 1rem !important;
+    justify-content: center !important;
+  }
+  .cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .popular-cards .card {
+    width: 60%;
+  }
+
+  .popular-places .view,
+  .activities .view,
+  .about-section .view {
+    background-color: white;
+  }
+
+  .card .bottom {
+    text-align: center;
+  }
+
+  .activities .card {
+    width: 80%;
+  }
+
+  .card {
+    text-align: center;
+  }
+  form {
+    margin: 0rem !important;
+    padding-left: 0rem;
+  }
+
+  input {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  input::placeholder {
+    padding-left: 0.5rem;
+  }
+}
